--- a/ios/TemplateRN/Info-dev.plist
+++ b/ios/TemplateRN/Info-dev.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>TemplateProject-dev</string>
+	<string>ReactNativeTest1-dev</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
