--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ENV=development
-API_URL=https://60c1ccda4f7e880017dc067f.mockapi.io/api/v1
+API_URL=https://5ecf098161c8480016701b41.mockapi.io/api
 APP_NAME=NTTDev
 CODE_PUSH_KEY=d55AYFKLz8qw8OyYLtNPHfsw6QtIbsyU4n2xT
