--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-localize": "^2.1.0",
     "react-native-modal": "^11.10.0",
     "react-native-navigation": "^7.16.0",
+    "react-native-orientation": "^3.1.3",
     "react-native-permissions": "^3.0.4",
     "react-native-picker-module": "^2.0.4",
     "react-native-picker-select": "^8.0.4",
