fix bug chip M1 apple

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,8 @@
     "amplify/backend/awscloudformation": true,
     "**/.git": true,
     "**/.DS_Store": true,
-    "**/node_modules": true,
-    "node_modules": true,
+    "**/node_modules": false,
+    "node_modules": false,
     "npm-debug.*": true,
     "dist": true,
     ".editorconfig": true,
