--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/netinfo": "^6.0.0",
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-mapbox-gl/maps": "^8.2.1",
     "appcenter": "4.1.0",
     "appcenter-analytics": "4.1.0",
     "appcenter-crashes": "4.1.0",
